<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="expenses">Expenses</string>
    <string name="events">Events</string>
    <string name="event_name">Event Name</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="action_save">Save</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="exp_type">Expense Type</string>
    <string name="select_date">Select Date</string>
    <string name="currency">Currency Type</string>
    <string name="amount">Amount</string>
    <string name="attach_receipt">Attach Receipt</string>
    <string name="search_hint">Search for...</string>
    <string name="limit">Total Cost Limit</string>
    <string name="cost_limit_currency">Currency Type</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="action_done">Done</string>
    <string name="select_category">Select Category</string>
    <string name="setting">Setting</string>
    <string name="blank_vendor_error">Vendor Cannot Be Blank.  Please
        enter an expense vendor</string>
    <string name="blank_amount_error">Amount Cannot Be Blank.  Please
        enter an expense amount</string>
    <string name="blank_event_error">Event Name Cannot Be Blank  Please
    enter an event name</string>
    <string-array name="category_names">
        <item>Cat1</item>
        <item>Cat2</item>
        <item>Cat3</item>
    </string-array>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>